fix: fix JavaFX dependencies
Fix:
- slf4j dependency
- JavaFX version with Java Runtime
- JavaFX build plugins
- resource path in MainApp.java
- ApplicationContext for running Springboot